# go-hello

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-go-hello  deployment.yaml  go.mod  hello.go  ingress.yaml  service.yaml  skaffold.yaml
morestrings/: BUILD.bazel  reverse.go
