load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# gazelle:prefix github.com/aamonten/go-hello
gazelle(name = "gazelle")

go_library(
    name = "go-hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/aamonten/go-hello",
    visibility = ["//visibility:private"],
    deps = ["//morestrings"],
)

go_binary(
    name = "go-hello",
    embed = [":go-hello_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "base-image",
    embed = [":go-hello_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base-image",
    stamp = True,
    visibility = ["//visibility:public"],
)

container_push(
   name = "push-image",
   image = ":image",
   format = "Docker",
   registry = "gcr.io",
   repository = "amontene-sandbox/go-hello",
   tag = "{BUILD_TIMESTAMP}"
)