load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

# gazelle:prefix github.com/aamonten/go-hello
gazelle(name = "gazelle")

go_library(
    name = "go-hello_lib",
    srcs = ["hello.go"],
    importpath = "github.com/aamonten/go-hello",
    visibility = ["//visibility:private"],
    deps = ["//morestrings"],
)

go_binary(
    name = "go-hello",
    embed = [":go-hello_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "base-image",
    embed = [":go-hello_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base-image",
    repository = "local/go-hello",
    stamp = True,
    visibility = ["//visibility:public"],
)

container_push(
   name = "push-image",
   image = ":image",
   format = "Docker",
   registry = "gcr.io",
   repository = "amontene-sandbox/go-hello",
)

k8s_object(
    name = "deploy-gcp",
    kind = "deployment",
    cluster = "gke_amontene-sandbox_europe-west1-b_go-dev",
    template = ":deployment.yaml",
)
